fixing nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,8 @@ nav {
   background-color: #A9AABC;
 }
 
-#settings {
-  margin-left: auto;
-}
 
-nav img {
-  justify-content: center;
-}
+
 
 section.board {
   display: grid;
